--- a/package.json
+++ b/package.json
@@ -122,6 +122,9 @@
   "devDependencies": {
     "antd": "^3.10.1",
     "crypto-js": "^3.1.9-1",
+    "d3": "^4.10.0",
+    "d3-hexbin": "^0.2.2",
+    "echarts": "^4.2.0-rc.2",
     "isomorphic-fetch": "^2.1.1",
     "less": "^3.8.1",
     "less-loader": "^4.0.4",
