Add app version tracked.

--- a/package.json
+++ b/package.json
@@ -119,7 +119,8 @@
       "locale": false,
       "basename": false,
       "isEmptyObject": false,
-      "isKeyExists": false
+      "isKeyExists": false,
+      "uiVersion": true
     }
   },
   "devDependencies": {
