--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-project-demo",
-  "version": "0.1.1",
+  "version": "0.1.2-0",
   "private": true,
   "dependencies": {
     "autoprefixer": "9.3.1",
